--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
                 </a>
                 <a class="contact-link link" href="tel:+380961111111">
                     <svg class="contacts-logo">
-                        <use href="./images/svg/sprite.svg#icon-smartphone"  weight=10 height=14 ></use>
+                        <use href="./images/svg/sprite.svg#icon-smartphone" ></use>
                     </svg> +38 096 111 11 11
                 </a>
             </div>
@@ -43,11 +43,11 @@
             <div class="container">
                 <h1 hidden>Фильтры</h1>
                 <ul class="filter-button-list list">
-                    <li class="filter-button-item"><button class="filter-button" type="button">Все</button></li>
-                    <li class="filter-button-item"><button class="filter-button" type="button">Веб-сайты</button></li>
-                    <li class="filter-button-item"><button class="filter-button" type="button">Приложения</button></li>
-                    <li class="filter-button-item"><button class="filter-button" type="button">Дизайн</button></li>
-                    <li class="filter-button-item"><button class="filter-button" type="button">Маркетинг</button></li>
+                    <li class="filter-button-item"><button class="filter-button animate-on-hover" type="button">Все</button></li>
+                    <li class="filter-button-item"><button class="filter-button animate-on-hover" type="button">Веб-сайты</button></li>
+                    <li class="filter-button-item"><button class="filter-button animate-on-hover" type="button">Приложения</button></li>
+                    <li class="filter-button-item"><button class="filter-button animate-on-hover" type="button">Дизайн</button></li>
+                    <li class="filter-button-item"><button class="filter-button animate-on-hover" type="button">Маркетинг</button></li>
                 </ul>
                 <ul class="project-list list">
                     <li class="project-card">
@@ -198,28 +198,28 @@
                 <ul class="social-list list">
                     <li class="list-item">
                         <a class="s-l" href="">
-                            <svg class="social-icon footer-icon" width="44" height="44">
+                            <svg class="social-icon footer-icon animate-on-hover" width="44" height="44">
                                 <use href="./images/svg/sprite.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="list-item">
                         <a class="s-l" href="">
-                            <svg class="social-icon footer-icon" width="44" height="44">
+                            <svg class="social-icon footer-icon animate-on-hover" width="44" height="44">
                                 <use href="./images/svg/sprite.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="list-item">
                         <a class="s-l" href="">
-                            <svg class="social-icon footer-icon" width="44" height="44">
+                            <svg class="social-icon footer-icon animate-on-hover" width="44" height="44">
                                 <use href="./images/svg/sprite.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="list-item">
                         <a class="s-l" href="">
-                            <svg class="social-icon footer-icon" width="44" height="44">
+                            <svg class="social-icon footer-icon animate-on-hover" width="44" height="44">
                                 <use href="./images/svg/sprite.svg#icon-linkedin"></use>
                             </svg>
                         </a>
@@ -228,5 +228,6 @@
             </div>
         </div>
     </footer>
+
 </body>
 </html>
