--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- секція герой -->
         <section class="section-hero">
             <h1 class="hero-title">Эффективные решения <br /> для вашего бизнеса</h1>
-            <button class="hero-button" type="button">Заказать услугу</button>
+            <button class="hero-button" type="button" data-modal-open>Заказать услугу</button>
         </section>
 
         <!-- секція про нас -->
@@ -141,9 +141,9 @@
                             <h3 class="team-name">Игорь Демьяненко</h3>
                             <p class="team-text">Product Designer</p>
                             <ul class="social-list list">
-                                <li class="list-item">
+                                <li class="list-item ">
                                     <a class="s-l" href="">
-                                        <svg class="social-icon" width="44" height="44">
+                                        <svg class="social-icon " width="44" height="44">
                                             <use href="./images/svg/sprite.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
@@ -286,13 +286,13 @@
                 </ul>
             </div>
         </section>
-
+    <!-- постійні клієнти -->
         <section class="our-clients">
             <h2 class="clients-title">Постоянные клиенты</h2>
             <ul class="client-list list">
                 <li class="client-item">
                     <a class="cl-link" href="">
-                        <svg class="client-logo">
+                        <svg class="client-logo ">
                             <use href="./images/svg/sprite.svg#icon-logo"> </use>
                         </svg>
                     </a>
@@ -381,6 +381,17 @@
             </div>
         </div>
     </footer>
+    
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button class="modal-button" data-modal-close>
+                <svg class="close-logo">
+                    <use href="./images/modal/modal.svg#icon-close-black-18dp-2-1" width="18" height="18"></use>
+                </svg>
+            </button> </div>
+    </div>
+    
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
